--- a/website/apps/importer/templates/importer/import_list.html
+++ b/website/apps/importer/templates/importer/import_list.html
@@ -14,7 +14,7 @@
 <section>
 	
 	<div class="page-header">
-		<h2>{% trans "Uploads" %} <small>{% trans "Start a new import session or handle existing ones" %}</small></h2>
+		<h2>{% trans "Uploads" %} <small></small></h2>
 	</div>
 	<div>
 		<p>{% lorem 40 w %}.</p>
