--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -145,8 +145,8 @@ $(document).ready(function() {
             <strong>{% trans "Please note!" %}</strong>
             <p>
                 {% blocktrans %}
-                The upload system tries to identify as exact as possible - however this is not an easy process.
-                You REALLY should process your files with the awesome "Picard" metadata-tagger before uploading them!!!
+                The upload system tries to identify as exact as possible - however this is not so easy to do...
+                You REALLY should process your files with the awesome "Picard" metadata-tagger prior to uploading them!!!
                 {% endblocktrans %}
                 <br>
                 <strong>{% blocktrans %}
@@ -155,7 +155,8 @@ $(document).ready(function() {
             </p>
             <ul>
                 <li><a href="https://musicbrainz.org/doc/MusicBrainz_Picard">MusicBrainz Picard</a></li>
-                <li><a href="https://musicbrainz.org/doc/How_to_Tag_Files_With_Picard">How to Tag Files With Picard</a></li>
+                <li><a href="https://musicbrainz.org/doc/How_to_Tag_Files_With_Picard">{% trans "How to Tag Files With Picard" %}</a></li>
+                <li>{% trans "If this all sounds too complicated, please don't hesitate to contact our" %} <a href="#">support</a></li>
             </ul>
         </div>
 
