--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -11323,7 +11323,7 @@ section.importer-importfiles .listing .item.working div.result-set {
 }
 /* line 105, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate {
-  background-color: #ddffd9;
+  background-color: #fffeac;
   color: #5a5a5a;
 }
 /* line 108, ../sass/apps/_importer.sass */
@@ -11544,7 +11544,7 @@ i.ajax-loader.c3CA3B9 {
 }
 /* line 299, ../sass/apps/_importer.sass */
 .import.summary .item.hover.duplicate {
-  background-color: #ddffd9;
+  background-color: #fffeac;
 }
 /* line 302, ../sass/apps/_importer.sass */
 .import.summary .item.hover.ready {
