--- a/website/site-static/sass/apps/_importer.sass
+++ b/website/site-static/sass/apps/_importer.sass
@@ -23,8 +23,8 @@ i.icon-obp
   height: 22px
 
 
-// $duplicateBackground: #fffeac
-$duplicateBackground: #ddffd9
+$duplicateBackground: #fffeac
+//$duplicateBackground: #ddffd9
 
 
 
