--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -1,6 +1,6 @@
 {% extends "layout_base.html" %}
 
-{% load truncate i18n thumbnail arating_tags wiki_tags disqus_tags comments atracker_tags sekizai_tags calc url_tags alibrary_tags %}
+{% load truncate i18n thumbnail arating_tags wiki_tags disqus_tags comments atracker_tags sekizai_tags calc url_tags alibrary_tags video_tags %}
 
 {% block heading %} <!-- heading / icon (large one) -->
 
@@ -321,6 +321,10 @@
             <section class="video">
 
                 <h2>{% trans "Video Clip" %}</h2>
+
+                {% for video in object.get_videos %}
+                    {% video_by_url video %}
+                {% endfor %}
 
             </section>
 
