--- a/website/apps/importer/templates/importer/form_import/_form_sidebar.html
+++ b/website/apps/importer/templates/importer/form_import/_form_sidebar.html
@@ -2,6 +2,8 @@
 
 <div id="import_summary" class="import summary listing">
 
+    {% comment %}
+    <!-- moved to client side rendering -->
 	<div class="page-header">
 		<h4>{% trans "Overview" %} <small>{% trans "Current Import" %}</small></h4>
 	</div>
@@ -64,5 +66,7 @@
 			</div>
 		</div>
 	</div>
+
+	{% endcomment %}
 
 </div>
