--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -8,7 +8,8 @@
 {% block heading %} <!-- heading / icon (large one) -->
 
 {% addtoblock "js-ext" %}{% pushy_scripts %}{% endaddtoblock %}
-{% addtoblock "js-post" %}{% istats_scripts %}{% endaddtoblock %}
+
+{% comment %}{% endcomment %}{% addtoblock "js-post" %}{% istats_scripts %}{% endaddtoblock %}
 
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/tmpl.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/jquery.iframe-transport.js"></script>{% endaddtoblock %}
@@ -40,8 +41,8 @@
 	</section>
 
 	<div class="clear"></div>
-	
-	
+
+
 
 </div>
 {% endblock %}
@@ -51,7 +52,7 @@
 <div id="menu_context" class="menu_context">
 	<div class="set">
 		<ul class="unstyled">
-			
+
 			<li class="link ">
 				<span class="left icon"> <a href="{% url importer-import-list %}" title="{% trans "Back to Detail-View" %}">{% trans "Back to Imports" %}</a> </span>
 				<span class="opt"></span>
@@ -80,7 +81,7 @@
 
 
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/importfile.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/base_pushy.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/base.js"></script>{% endaddtoblock %}
 
 {% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}importer/js/templates.js"></script>-->{% endaddtoblock %}
 
@@ -106,8 +107,8 @@
 <script type="text/javascript">
 
 $(document).ready(function() {
-	
-	
+
+
 	$(function () {
 
 		importer.ui = new ImporterUi();
@@ -120,11 +121,11 @@ $(document).ready(function() {
             sequentialUploads: true,
 	        limitConcurrentUploads: 1
 	   };
-	   
-	   importer.ui.init();
-	
 
-	
+	   importer.ui.init();
+
+
+
 	});
 });
 </script>
@@ -134,7 +135,7 @@ $(document).ready(function() {
 <div class="item_inner">
 
 <section>
-	
+
 	<div class="page-header">
 		<h2>{% trans "Upload" %} <small>{% trans "Add/Upload Files to the Import Queue" %}</small></h2>
 	</div>
@@ -165,11 +166,11 @@ $(document).ready(function() {
 	</div>
 
 	<div class="uploader">
-		
+
 		<form id="fileupload" action="{% url api_dispatch_list api_name="v1" resource_name="importfile" %}?import_session={{ object.pk }}" method="POST" enctype="multipart/form-data">
-    
+
 	        <input type="hidden" id="import_api_url"  value="{% url api_dispatch_list resource_name='import' api_name='v1'%}{{ object.id }}" />
-	        
+
 	        <div class="fileupload-buttonbar">
 
 	                <span class="btn btn-success fileinput-button">
@@ -191,7 +192,7 @@ $(document).ready(function() {
 </section>
 
 <section class="importer-importfiles">
-	
+
 	<div class="page-header">
 		<h2>Review <small>your uplads and confirm additions</small></h2>
 	</div>
@@ -245,6 +246,5 @@ $(document).ready(function() {
 
 
 
-{% load alibrary_tags %}
 
 {% endblock %}
