--- a/website/site-static/css/pplayer.master.css
+++ b/website/site-static/css/pplayer.master.css
@@ -1,18 +1,12 @@
 /*
-Syntax error: Undefined variable: "$image_path".
-        on line 138 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass
+Syntax error: Undefined variable: "$main-b".
+        on line 58 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass
         from line 10 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/pplayer.master.sass
 
 Backtrace:
-/Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass:138
+/Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass:58
 /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/pplayer.master.sass:10
 /Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/node.rb:40:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/string_interpolation.rb:82:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/node.rb:40:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/list.rb:71:in `block in _perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/list.rb:71:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/list.rb:71:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/script/node.rb:40:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:298:in `visit_prop'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:37:in `visit'
@@ -91,4 +85,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$image_path\".\A         on line 138 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass\A         from line 10 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/pplayer.master.sass"; }
+  content: "Syntax error: Undefined variable: \"$main-b\".\A         on line 58 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/_pplayer.style.sass\A         from line 10 of /Users/ohrstrom/Documents/Code/openbroadcast.ch/website/site-static/sass/pplayer.master.sass"; }
