--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -6523,7 +6523,7 @@ ul.tagit input[type="text"] {
 }
 /* line 57, ../sass/site/_wmd.sass */
 .wmd-preview__orig a:visited {
-  color: #0b0080;
+  color: #00bb00;
 }
 /* line 59, ../sass/site/_wmd.sass */
 .wmd-preview__orig a:hover {
