--- a/website/site-static/sass/aplayer/_slider.sass
+++ b/website/site-static/sass/aplayer/_slider.sass
@@ -46,7 +46,7 @@
     position: relative
     &:before
       position: absolute
-      background: #00bb00
+      background: $main-a
       content: ""
   &.horizontal div:before
     left: 10px
