--- a/website/site-static/sass/aplayer/_style.sass
+++ b/website/site-static/sass/aplayer/_style.sass
@@ -170,7 +170,7 @@ body.popup
           font-size: 14px
           color: #a5a5a5
           &:hover
-            color: #00bb00
+            color: $main-a
             text-decoration: none
       
     
@@ -231,7 +231,7 @@ body.popup
         border-bottom: none
         background: #ddffd9
         .icon > i
-          color: #00bb00
+          color: $main-a
         .indicator
           display: block
           
@@ -248,7 +248,7 @@ body.popup
           padding: 0 !important
           .inner
             width: 0%
-            background: #00bb00
+            background: $main-a
 
 
   .screen.emission
@@ -282,7 +282,7 @@ body.popup
         padding-top: 4px
 
       a
-        //background: #6633cc
+        //background: $main-b
         //color: white
 
   .screen.comments
@@ -307,7 +307,7 @@ body.popup
     div.playhead
     
       .background
-        background: #00bb00
+        background: $main-a
         
       .indicator
         background-image: url(#{$static-url}aplayer/img/playhead.indicator.png)
@@ -339,7 +339,7 @@ body.popup
 
         &.has-waveform
           background-size: 100% 100%
-          background-color: #00bb00
+          background-color: $main-a
         
         
         .wrapper
@@ -354,7 +354,7 @@ body.popup
             // float: right
             background: #ddffd9
             opacity: 0.5
-            border-right: 1px solid #00bb00
+            border-right: 1px solid $main-a
     
   
 
