--- a/website/site-static/sass/apps/_arating.sass
+++ b/website/site-static/sass/apps/_arating.sass
@@ -27,7 +27,7 @@ ul.arating
         color: white
         text-decoration: none !important
         &.vote1
-          background-color: #0b0
+          background-color: $main-a
         &.vote-1
           background-color: #F00
         span, i
