--- a/website/site-static/sass/apps/_collector.sass
+++ b/website/site-static/sass/apps/_collector.sass
@@ -142,5 +142,5 @@ $popup-width: 280px
             padding-top: 0
             border: 4px solid #333
             &.selected
-              border-color: #6633cc
+              border-color: $main-b
 
