--- a/website/site-static/sass/apps/_lookup.sass
+++ b/website/site-static/sass/apps/_lookup.sass
@@ -83,7 +83,7 @@
       p
         color: #efefef
       a
-        background: #6633cc
+        background: $main-b
         color: white
 
     section.form
