--- a/website/site-static/sass/apps/_playlist_editor.sass
+++ b/website/site-static/sass/apps/_playlist_editor.sass
@@ -171,7 +171,7 @@
       // override
       background-color: transparent
       a
-        color: #00bb00 !important
+        color: $main-a !important
       .visible-while-playing
         display: inline-block
       .hidden-while-playing
@@ -356,7 +356,7 @@
         margin: 0 5px
         width: 808px
         .bar
-          background: #00bb00
+          background: $main-a
           padding: 0
 
 
