--- a/website/site-static/sass/apps/_postman.sass
+++ b/website/site-static/sass/apps/_postman.sass
@@ -61,7 +61,7 @@
           a
             color: #5a5a5a
             &:hover
-              color: #6633cc
+              color: $main-b
               text-decoration: none
 
           button
@@ -71,7 +71,7 @@
             padding: 0
             line-height: 0
             &:hover
-              color: #6633cc
+              color: $main-b
 
 
 
