--- a/website/site-static/sass/apps/_shortcutter.sass
+++ b/website/site-static/sass/apps/_shortcutter.sass
@@ -49,7 +49,7 @@ div.shortcutter
         
     &.hover .col-left i
       @include transition (color 0.4s)
-      color: #00bb00
+      color: $main-a
       
     .col-right
       // background: blue
