--- a/website/site-static/sass/apps/scheduler.sass
+++ b/website/site-static/sass/apps/scheduler.sass
@@ -14,7 +14,7 @@ body.scheduler
 $theme-0-dark: #95d182
 $theme-0-bright: #ddffd9
 
-$theme-1-dark: #63C
+$theme-1-dark: $main-b
 $theme-1-bright: #d9ccf2
 
 $theme-2-dark: #cc33b9
@@ -71,7 +71,7 @@ $theme-4-bright: #f2dacc
         padding-top: 12px
 
       a
-        background: #6633cc
+        background: $main-b
         color: white
         
     section.form
@@ -89,7 +89,7 @@ $theme-4-bright: #f2dacc
             padding-top: 0
             border: 4px solid #333
             &.selected
-              border-color: #6633cc
+              border-color: $main-b
               
             &.theme-0
               background: $theme-0-dark
