--- a/website/site-static/sass/bootstrap/_progress-bars.sass
+++ b/website/site-static/sass/bootstrap/_progress-bars.sass
@@ -77,7 +77,7 @@
 
 // Success (green)
 .progress-success .bar
-  +gradient-vertical(#00bb00, #00bb00)
+  +gradient-vertical($main-a, $main-a)
 
 .progress-success.progress-striped .bar
   +gradient-striped(#62c462)
