--- a/website/site-static/sass/element/_aplayer_inline.sass
+++ b/website/site-static/sass/element/_aplayer_inline.sass
@@ -92,13 +92,13 @@
       a
         color: #a5a5a5
         &:hover
-          color: #00bb00
+          color: $main-a
 
     // alibrary only
     div.playhead
       margin: 8px 0
       .background
-        background: #00bb00
+        background: $main-a
 
       .indicator
         background-image: url(/static/aplayer/img/playhead.indicator.png)
@@ -152,7 +152,7 @@
           padding: 0 5px 0 0
 
         a
-          color: #6633cc
+          color: $main-b
           &:hover
             text-decoration: underline
 
@@ -183,7 +183,7 @@
             padding: 0 !important
             .inner
               width: 0%
-              background: #00bb00
+              background: $main-a
 
 
 // source switches
