--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -62,13 +62,13 @@ section.comments.disqus
         // color overrides
         &.primary
           ul.action li > a
-            color: #00BB00
+            color: $main-a
             &:hover
-              background: #00BB00
+              background: $main-a
         &.secondary
           ul.action li > a
             &:hover
-              background: #6633cc
+              background: $main-b
 
 
 
@@ -287,7 +287,7 @@ section.comments.disqus
             color: #5a5a5a
             text-decoration: none
             &:hover
-              color: #6633cc
+              color: $main-b
             i
               font-size: 180%
               line-height: 17px
@@ -321,7 +321,7 @@ section.comments.disqus
       display: block
       border: 1px solid #F5F5F5
       &:hover
-        border: 1px solid #00BB00
+        border: 1px solid $main-a
 
   .item_menu
     //margin-bottom: 20px
@@ -541,5 +541,5 @@ section.item_inner .tab-pane
             width: 100%
 
           &:hover a
-            color: #6633cc
+            color: $main-b
 
