--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -155,7 +155,7 @@
             &.highlight
               text-transform: uppercase
               small
-                color: #00bb00
+                color: $main-a
             
 
 
@@ -177,7 +177,7 @@
       &:first-child
         margin-right: 12px
       &.top
-        background: #00bb00
+        background: $main-a
         color: #fff
       &.flop
         background: red
@@ -236,11 +236,11 @@
             border-radius: 1px
             text-align: center
             padding: 0 0px 2px 2px
-            color: #00bb00 !important
+            color: $main-a !important
             text-decoration: none !important
 
           &:hover > a
-            background: #00bb00
+            background: $main-a
             color: #fff !important
 
 
@@ -251,11 +251,11 @@
           > a
             text-align: center
             padding: 0 0px 2px 2px
-            color: #6633cc !important
+            color: $main-b !important
             text-decoration: none !important
 
           &:hover > a
-            color: #00bb00 !important
+            color: $main-a !important
             background: transparent
 
 
@@ -661,8 +661,8 @@
             float: right
             text-transform: uppercase
             &.active
-              background: #00bb00
-              border-color: #00bb00
+              background: $main-a
+              border-color: $main-a
               color: white
 
       .c5
@@ -703,8 +703,8 @@
             float: right
             text-transform: uppercase
             &.active
-              background: #00bb00
-              border-color: #00bb00
+              background: $main-a
+              border-color: $main-a
               color: white
   
     &.m
@@ -788,7 +788,7 @@
                   &.active
                     background-image: url(/static/img/base/element.tag.a.png)
                     border-left: 1px solid #e3ffe8
-                    color: #00BB00
+                    color: $main-a
               
 		
 
@@ -968,8 +968,8 @@
             float: right
             text-transform: uppercase
             &.active
-              background: #00bb00
-              border-color: #00bb00
+              background: $main-a
+              border-color: $main-a
 
 
 
@@ -1069,7 +1069,7 @@
           font-size: 16px
           color: #5a5a5a
           &:hover
-            color: #6633cc
+            color: $main-b
             text-decoration: none
         // @include link_external
 	  
@@ -1133,7 +1133,7 @@
 .listview.container .list_body
   span.highlight
     background-color: #DDFFD9
-    color: #00BB00
+    color: $main-a
 
 
 
@@ -1167,7 +1167,7 @@
   a #searchbar_input
     margin: 0 0 0 0
     &.blur
-      color: #00BB00
+      color: $main-a
     &.focus
       color: #333333
 
@@ -1212,7 +1212,7 @@
     a #searchbar_input
       margin: 0 0 0 0
       &.blur
-        color: #00BB00
+        color: $main-a
       &.focus
         color: #333333
 
@@ -1224,11 +1224,11 @@
         border-right-color: #7ab89b
         border-bottom-color: #7ab89b
         input
-          color: #00BB00
+          color: $main-a
         i
           display: inline
         span
-          color: #00BB00
+          color: $main-a
           padding: 0 0 0 5px
           display: inline
 
@@ -1236,14 +1236,14 @@
     a
       color: #5a5a5a
       &:hover
-        color: #00BB00
+        color: $main-a
         text-decoration: none
 
   .filter-bar
     float: right
     margin: 0
     a
-      color: #00BB00
+      color: $main-a
       background: #ddffd9
       border: 1px solid white
       border-right-color: #7ab89b
