--- a/website/site-static/sass/element/_search.sass
+++ b/website/site-static/sass/element/_search.sass
@@ -82,7 +82,7 @@ div.autocomplete
           em.highlight
             //background: #DDFFD9
             color: #DDFFD9
-            //color: #0b0
+            //color: $main-a
             padding: 0px
             //font-style: normal
             //text-decoration: underline
@@ -102,7 +102,7 @@ div.autocomplete
               color: black
 
 
-            // color: #0b0
+            // color: $main-a
         
         
       
