--- a/website/site-static/sass/element/_sidebar.sass
+++ b/website/site-static/sass/element/_sidebar.sass
@@ -235,7 +235,7 @@ div.row .sidebar
             a
               text-align: center
               display: block
-              background-color: #00BB00
+              background-color: $main-a
               color: #ffffff
 
           div.duration
@@ -449,7 +449,7 @@ div.row .sidebar
             a
               text-align: center
               display: block
-              background-color: #00BB00
+              background-color: $main-a
               color: #ffffff
 
           div.duration
