--- a/website/site-static/sass/element/_style.sass
+++ b/website/site-static/sass/element/_style.sass
@@ -1,6 +1,6 @@
 // Variables
-$main-a: #00BB00
-$main-b: #6633CC
+$main-a: $main-a
+$main-b: $main-b
 
 $img-path: '/static/img/prototype/'
 
@@ -239,13 +239,13 @@ table.front td
       i
         font-size: 50px
         line-height: 50px
-        color: #00BB00
+        color: $main-a
     div.title
       padding: 14px 0 0 66px !important
       h1
         font-size: 26px
         line-height: 26px
-        color: #00BB00
+        color: $main-a
         //font-family: "quatro-slab"
         font-family: "Times New Roman", Times, serif
         font-weight: 700
@@ -1504,7 +1504,7 @@ div.tagcloud.inline
   // color: #5a5a5a
   // border: 1px solid #dfdfdf
   &.on
-    background: #00bb00
+    background: $main-a
     color: white
 
 
