--- a/website/site-static/sass/site/_ac-tagging.sass
+++ b/website/site-static/sass/site/_ac-tagging.sass
@@ -37,7 +37,7 @@ ul.tagit
       -moz-border-radius: 1px
       border-radius: 1px
       -webkit-border-radius: 1px
-      border: 1px solid #0B0
+      border: 1px solid $main-a
       background: none
       background-color: #DDFFD9
       color: #555
