--- a/website/site-static/sass/site/_forms_extra.sass
+++ b/website/site-static/sass/site/_forms_extra.sass
@@ -177,7 +177,7 @@ form.form-horizontal
         
         &.lookup-match
           
-          // border-color: #0b0
+          // border-color: $main-a
           background-color: #ddffd9
         &.lookup-diff
           background-color: #fff4d9
@@ -336,7 +336,7 @@ ul.relations.external
   li > a
     color: #5a5a5a
     &:hover
-      color: #6633cc
+      color: $main-b
     i
       font-size: 130%
 
@@ -520,7 +520,7 @@ ul.selectable-deck
         font-size: 14px
       &:hover
         text-decoration: none
-        color: #6633cc
+        color: $main-b
       //.ui-button-text
       //  display: block
       //  width: 16px
