--- a/website/site-static/sass/site/_wmd.sass
+++ b/website/site-static/sass/site/_wmd.sass
@@ -55,7 +55,7 @@
     color: #06e
     text-decoration: none
     &:visited
-      color: #0b0080
+      color: $main-a
     &:hover
       color: #0645ad
     &:active
