--- a/website/site-static/sass/util/_dialog.sass
+++ b/website/site-static/sass/util/_dialog.sass
@@ -135,7 +135,7 @@
   color: #111
   border: 0 dashed transparent
   .qtip-titlebar
-    background-color: #00bb00
+    background-color: $main-a
     color: white
     border: 0 dashed transparent
   .qtip-icon
