--- a/website/site-static/sass/apps/_alibrary.sass
+++ b/website/site-static/sass/apps/_alibrary.sass
@@ -54,7 +54,7 @@
       p
         color: #efefef
       a
-        background: #6633cc
+        background: $main-b
         color: white
 
     section.form
@@ -113,6 +113,6 @@ div.daypart-grid
           border-color: #BFC7FF
 
         &.selected
-          background-color: #0B0 !important
-          border: 1px solid #0B0
+          background-color: $main-a !important
+          border: 1px solid $main-a
 
