--- a/website/site-static/sass/apps/_datepicker.sass
+++ b/website/site-static/sass/apps/_datepicker.sass
@@ -80,10 +80,10 @@ td.datepickerNotInMonth a
 tbody
   &.datepickerDays td
     &.datepickerSelected a
-      background: #6633cc
+      background: $main-b
       color: #fff !important
     &.datepickerNotInMonth.datepickerSelected a
-      background: #6633cc
+      background: $main-b
       color: #fff
   &.datepickerYears td.datepickerSelected, &.datepickerMonths td.datepickerSelected
     background: #ddffd9
@@ -91,7 +91,7 @@ tbody
 div.datepicker
   a:hover
     color: #fff
-    background: #6633cc
+    background: $main-b
   td.datepickerNotInMonth a:hover
     color: #999
   tbody th
