--- a/website/site-static/sass/apps/_importer.sass
+++ b/website/site-static/sass/apps/_importer.sass
@@ -132,7 +132,7 @@ section.importer-importfiles
 
           > .bar
             height: 4px
-            background: #00bb00
+            background: $main-a
 
     
       &.duplicate
