--- a/website/site-static/sass/apps/_on_air.sass
+++ b/website/site-static/sass/apps/_on_air.sass
@@ -10,7 +10,7 @@ $on-air-bg: #f5f5f5
     a
       text-transform: uppercase
       &.btn
-        background-color: #0b0
+        background-color: $main-a
         border: none
 
 
@@ -39,7 +39,7 @@ $on-air-bg: #f5f5f5
         line-height: 22px
         .btn
           color: white
-          background-color: #0b0
+          background-color: $main-a
           border: none
           height: 16px
           padding: 1px 4px
