--- a/website/site-static/sass/element/_dialog.sass
+++ b/website/site-static/sass/element/_dialog.sass
@@ -55,7 +55,7 @@
     filter: alpha(opacity = 40)
     padding: 0
   .title-bar
-    background-color: #00BB00
+    background-color: $main-a
     padding: 6px
     position: relative
     &.dragging
