--- a/website/site-static/sass/element/_element.sass
+++ b/website/site-static/sass/element/_element.sass
@@ -15,7 +15,7 @@ ul.indicator
     &.q2
       background-color: #f4b700
     &.q3
-      background-color: #00bb00
+      background-color: $main-a
 
 	  
 	  
@@ -24,7 +24,7 @@ a.iconset.iconset-license
   color: #5a5a5a
   font-size: 16px
   &:hover
-    color: #6633cc
+    color: $main-b
     text-decoration: none
   i
     padding-right: 4px
@@ -57,7 +57,7 @@ div.slideout.base
   padding: 18px 18px 0px 18px
   width: 320px
   background: #fff
-  border: 1px solid #00BB00
+  border: 1px solid $main-a
   display: none
   a.handle
     top: -1px !important
