--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -6,6 +6,7 @@
 // --------------------------------------------------
 $main-a: #00BB00
 $main-b: #6633CC
+
 $main-color: $main-a
 $main-color-b: $main-a
 $main-link-color: $main-b
@@ -29,7 +30,7 @@ $static-url: '/static/'
 
 
 // Links
-$linkColor: #6633CC !default
+$linkColor: $main-b !default
 $linkColorHover: darken($linkColor, 15) !default
 
 // Site
@@ -49,7 +50,7 @@ $white: white !default
 // Accent colors
 $blue: #049cdb !default
 $blueDark: #0064cd !default
-$green: #00bb00 !default
+$green: $main-a !default
 $red: #9d261d !default
 $yellow: #ffc40d !default
 $orange: #f89406 !default
@@ -135,15 +136,15 @@ $errorText: #ff743e !default
 $errorBackground: #ffeed4 !default
 $errorBorder: darken(adjust-hue($errorBackground, -10), 3%) !default
 
-$successText: #0B0 !default
+$successText: $main-a !default
 $successBackground: #DDFFD9 !default
 $successBorder: darken(adjust-hue($successBackground, -10), 5%) !default
 
-$successTextAlt: #6633CC !default
+$successTextAlt: $main-b !default
 $successBackgroundAlt: #f3f0fb !default
 $successBorderAlt: darken(adjust-hue($successBackgroundAlt, -10), 5%) !default
 
-$infoText: #0B0 !default
+$infoText: $main-a !default
 $infoBackground: #DDFFD9 !default
 $infoBorder: darken(adjust-hue($successBackground, -10), 5%) !default
 
