--- a/website/site-static/sass/util/_jgrowl.sass
+++ b/website/site-static/sass/util/_jgrowl.sass
@@ -68,7 +68,7 @@ div
       margin-right: auto
   &.jGrowl div
     &.jGrowl-notification, &.jGrowl-closer
-      background-color: #00BB00
+      background-color: $main-a
       opacity: .95
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=95)"
       filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95)
