profile views & action display

--- a/website/apps/actstream/templates/actstream/action_list.html
+++ b/website/apps/actstream/templates/actstream/action_list.html
@@ -102,7 +102,10 @@
                     {% endif %}
 				</td>
 
-				<td><span class="pull-right">{{ action.timestamp|timesince }} {% trans "ago" %}</span></td>
+				<td>
+                    {% comment %}<span class="pull-right">{{ action.timestamp|timesince }} {% trans "ago" %}</span>{% endcomment %}
+                    <span class="pull-right">{{ action.timestamp }} {% trans "ago" %}</span>
+                </td>
 			</tr>
 
 			{% endfor %}
