--- a/website/apps/profiles/templates/profiles/profile/_detail_info.html
+++ b/website/apps/profiles/templates/profiles/profile/_detail_info.html
@@ -101,6 +101,7 @@
 			&nbsp;
 		</dd>
 
+        {% comment %}
 		<dt>
 			{% trans "Stats" %}:
 		</dt>
@@ -108,6 +109,7 @@
 			<span class="value">173</span> <span class="key">{% trans "Plays" %}</span> /
 			<span class="value">28</span> <span class="key">{% trans "Downloads" %}</span>
 		</dd>
+		{% endcomment %}
 
     {% if object.tags %}
         <dt>
