removed label relations in detail-view

--- a/website/apps/alibrary/templates/alibrary/label/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/label/_detail_info.html
@@ -130,7 +130,7 @@
 
 
 
-	<!---->
+	{% comment %}
 	<dl class="dl-horizontal">
 
 		<dt>
@@ -147,6 +147,7 @@
 		</dd>
 
 	</dl>
+	{% endcomment %}
 
 
 	<dl class="dl-horizontal sub">
